chore: 迁移用法